<!-- strings.xml -->
<resources>
    <!-- Principal -->
    <string name="app_name">MyApp</string>
    <string name="principal_tittle_login1">BUSQUEDAS A GRAN ESCALA</string>
    <string name="principal_tittle_login2">EMPRESAS DEDICADAS</string>
    <string name="principal_tittle_login3">FACIL Y RAPIDO</string>
    <string name="principal_tittle_login4">FACILIDAD EN TRANSLADO</string>
    <string name="principal_tittle_login5">ENTREGAS A TIEMPO</string>
    <string name="principal_tittle_login_cont">Inicie Sesion Para Continuar</string>
    <string name="principal_text_mail">CORREO ELECTRONICO</string>
    <string name="principal_input_mail">ejemplo@hotmail.com</string>
    <string name="principal_text_password">CONTRASEÑA</string>
    <string name="principal_input_password">*********</string>
    <string name="principal_text_phone">Numero Telefonico</string>

    <string name="principal_button_sesion_login">INICIAR SESION</string>
    <string name="principal_button_sesion_google">CONTINUAR CON GOOGLE</string>
    <string name="principal_text_register">¿No Tiene Niguna Cuenta?</string>
    <!-- Registro -->
     <string name="register_tittle">COMENZAR REGISTRO</string>
     <string name="register_second_tittle">Notas Antes De Comenzar</string>
     <string name="register_second_tittle_label_first">1- Asegurese de no haberse registrado con anterioridad con el correo electronico , si ese es el caso entonces procure obtener una nueva contraseña para su cuenta en el apartado de inicio de sesion</string>
     <string name="register_second_tittle_label_second">2- Procure de no olvidar su cuenta, es posible recuperarla , pero el trabajo podria variar en algunas ocaciones cuando se detecten varias recuperaciones de una misma cuenta por seguridad</string>
     <string name="register_second_tittle_label_third">3- Considere el uso de una sola cuenta para evitar conflictos futuros con alguna problematica dentro de la aplicacion</string>
     <string name="register_button_continue">Continuar</string>

     <string name="register_tittle_second">Paso 1 | Paso 5</string>
     <string name="register_holder_name">Ingrese Su Nombre Completo</string>
     <string name="register_tittle_name">¿CUAL ES SU NOMBRE?</string>

     <string name="register_tittle_third">Paso 2 | Paso 5</string>
     <string name="register_holder_date">Ingrese Su Fecha De Nacimiento</string>
     <string name="register_tittle_date">¿CUAL ES SU FECHA DE NACIMIENTO?</string>

     <string name="register_tittle_fourth">Paso 3 | Paso 5</string>
     <string name="register_tittle_password">ESTABLEZCA SU CONTRASEÑA</string>
     <string name="register_warning_password_empty">La Contraseña Debe Ser De Minimo 8 Caracteres</string>
     <string name="register_warning_password_incorrect">La Contraseña No Es Valida</string>
     <string name="register_warning_password_correct">La Contraseña Es Valida</string>

     <string name="register_tittle_fifth">Paso 4 | Paso 5</string>
     <string name="register_tittle_mail">CORREO ELECTRONICO</string>
     <string name="register_tittle_phone">NUMERO TELEFONICO</string>
     <string name="register_holder_mail">Ingrese Aqui Su Correo Electronico</string>
     <string name="register_holder_phone">Ingrese Aqui Su Numero Telefonico</string>
     <string name="register_change_phone">UTILIZAR MI NUMERO TELEFONICO</string>
     <string name="register_change_mail">UTILIZAR MI CORREO ELECTRONICO</string>
     
     <string name="register_tittle_six">Paso 5 | Paso 5</string>
     <string name="register_button_finally">Confirmar</string>
     <string name="register_tittle_finally_data">REGISTRO COMPLETO</string>
     <string name="register_tittle_finally_name">NOMBRE COMPLETO</string>
     <string name="register_tittle_finally_date">FECHA DE NACIMIENTO</string>
     <string name="register_tittle_finally_password">CONTRASEÑA</string>

    <!-- Modal -->
    <string name="modal_view_tittle_first">OCURRIO UN PROBLEMA</string>
    <string name="modal_view_tittle_exit">¿ESTA SEGURO DE SALIR?</string>
    <string name="modal_view_tittle_confirm">¿DESEA CONTINUAR?</string>
    <string name="modal_view_text_first">Asegurese De Llenar Correctamente Su Nombre</string>
    <string name="modal_view_text_second">Porfavor Seleccione Una Fecha Valida</string>
    <string name="modal_view_text_third_part_one">Asegurese De Llenar Correctamente Su Contraseña</string>
    <string name="modal_view_text_third_part_two">Porfavor Proporcione Una Contraseña Valida</string>
    <string name="modal_view_text_fourth_part_one">Asegurese De Llenar Correctamente Su Numero Telefonico</string>
    <string name="modal_view_text_fourth_part_two">Porfavor Proporcione Un Numero Telefonico Valido</string>
    <string name="modal_view_text_fourth_part_three">Asegurese De Llenar Correctamente Su Correo Electronico</string>
    <string name="modal_view_text_fourth_part_fourth">Porfavor Proporcione Un Correo Electronico Valido</string>
    <string name="modal_view_text_exit">Si Decide Salir Se Perderan Los Datos Ya Proporcionados Para Su Registro</string>
    <string name="modal_view_text_confirm">Asegurese Que Los Datos Proporcionados Sean Los Correctos Para Evitar Futuras Confusiones</string>
    <string name="modal_view_text_button_exit_accept">SALIR</string>
    <string name="modal_view_text_button_confirm_accept">CONTINUAR</string>
    <string name="modal_view_text_button_confirm_decline">REGRESAR</string>
    <string name="modal_view_text_button_exit_decline">CANCELAR</string>
    <string name="modal_view_text_button_first">ACEPTAR</string>
</resources>
