<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutRegisterParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">
    <FrameLayout
    android:id="@+id/frameLayoutContainer"
    android:layout_width="match_parent"
    android:layout_height="0dp">
    <LinearLayout
        android:id="@+id/linearLayoutWaveRegister"
        style="@style/PrincipalLinearLayoutWave"
        android:gravity="start"
        android:orientation="horizontal"
        android:background="@drawable/linear_layout_wave_register"
        >
        <ImageView
            android:id="@+id/myImageViewExit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_weight=".15"
            android:src="@mipmap/left_arrow" />
        <TextView
            android:id="@+id/textViewRegister1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register_tittle_six"
            style="@style/TittleRegistro" />
    </LinearLayout>
    <ImageView
        android:id="@+id/waveImageRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:src="@drawable/frame_layout_wave_register"
        android:scaleType="fitXY" />

    </FrameLayout>

    <TextView 
        android:id="@+id/textViewRegister1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_tittle_finally_data"
        style="@style/TittleRegistro"
        android:textColor="#4c66aa"
        android:gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="15dp"
    />
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:gravity="start">
    <LinearLayout android:id="@+id/linearLayoutName" style="@style/TittlePrincipal_linear">

        <EditText
        android:id="@+id/editTextUserName"
        style="@style/PrincipalInput"
        android:enabled="false" 
        android:focusable="false"
        android:inputType="none" 
        />
    </LinearLayout>
    <TextView
    android:id="@+id/textViewName"
    android:text="@string/register_tittle_finally_name"
    style="@style/PrincipalText"
    android:layout_marginTop = "15dp"/>
    </RelativeLayout>

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:gravity="start">
    <LinearLayout android:id="@+id/linearLayoutDate" style="@style/TittlePrincipal_linear">

        <EditText
        android:id="@+id/editTextBirthDate"
        style="@style/PrincipalInput"
        android:enabled="false" 
        android:focusable="false"
        android:inputType="none" 
        />
    </LinearLayout>
    <TextView
    android:id="@+id/textViewDate"
    android:text="@string/register_tittle_finally_date"
    style="@style/PrincipalText"
    android:layout_marginTop = "15dp"/>
    </RelativeLayout>

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:gravity="start">
    <LinearLayout android:id="@+id/linearLayoutPassword" style="@style/TittlePrincipal_linear">

        <EditText
        android:id="@+id/editTextPassword"
        style="@style/PrincipalInput"
        android:enabled="false" 
        android:focusable="false"
        android:inputType="none" 
        />
    </LinearLayout>
    <TextView
    android:id="@+id/textViewPassword"
    android:text="@string/register_tittle_finally_password"
    style="@style/PrincipalText"
    android:layout_marginTop = "15dp"/>
    </RelativeLayout>

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:gravity="start">
    <LinearLayout android:id="@+id/linearLayoutRegister" style="@style/TittlePrincipal_linear">

        <EditText
        android:id="@+id/editTextUserRegister"
        style="@style/PrincipalInput"
        android:enabled="false" 
        android:focusable="false"
        android:inputType="none" 
        />
    </LinearLayout>
    <TextView
    android:id="@+id/textViewRegister"
    android:text="@string/register_tittle_mail"
    style="@style/PrincipalText"
    android:layout_marginTop = "15dp"/>
    </RelativeLayout>
    <LinearLayout
    android:id="@+id/layoutButtonContinue"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginTop="20dp"
    android:gravity="center">
        <Button
        android:id="@+id/buttonRegisterContinue"
        android:text="@string/register_button_finally"
        style="@style/PrincipalButtonSesion"
        ></Button>
    </LinearLayout>
</LinearLayout>