<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/linearLayoutRegisterParent"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#FFFFFF"
              android:orientation="vertical">
    <FrameLayout android:id="@+id/frameLayoutContainer"
                 android:layout_width="match_parent"
                 android:layout_height="0dp">
        <LinearLayout android:id="@+id/linearLayoutWaveRegister"
                      style="@style/PrincipalLinearLayoutWave"
                      android:gravity="start"
                      android:orientation="horizontal"
                      android:background="@drawable/linear_layout_wave_register">
            <ImageView android:id="@+id/myImageViewExit"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_marginEnd="40dp"
                       android:layout_marginStart="25dp"
                       android:layout_marginTop="30dp"
                       android:layout_weight=".15"
                       android:src="@mipmap/left_arrow" />
            <TextView android:id="@+id/textViewRegister1"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/register_tittle_third"
                      style="@style/TittleRegistro" />
        </LinearLayout>
        <ImageView android:id="@+id/waveImageRegister"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="bottom"
                   android:src="@drawable/frame_layout_wave_register"
                   android:scaleType="fitXY" />
    </FrameLayout>
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:gravity="start">
        <LinearLayout android:id="@+id/linearLayoutName"
                      style="@style/TittlePrincipal_linear">
            <EditText android:id="@+id/inputTextName"
                      android:hint="@string/register_holder_date"
                      android:enabled="false"
                      android:focusable="false"
                      android:inputType="none"
                      style="@style/PrincipalInput" />
        </LinearLayout>
        <TextView android:id="@+id/textViewName"
                  android:text="@string/register_tittle_date"
                  style="@style/PrincipalText"
                  android:layout_marginTop="15dp" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/relativeDatePicker"
                    android:layout_width="match_parent"
                    android:layout_height="450dp">
        <androidx.compose.ui.platform.ComposeView android:id="@+id/composeDatePicker"
                                                  android:layout_width="match_parent"
                                                  android:layout_height="match_parent" />
    </RelativeLayout>
    <LinearLayout android:id="@+id/layoutButtonContinue"
                  android:layout_width="match_parent"
                  android:layout_height="120dp"
                  android:layout_marginTop="-62dp"
                  android:gravity="center">
        <Button android:id="@+id/buttonRegisterContinue"
                android:text="@string/register_button_continue"
                style="@style/PrincipalButtonSesion" />
    </LinearLayout>
</LinearLayout>